--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     
     <groupId>org.igniterealtime.openfire</groupId>
     <artifactId>ohun</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <name>Ohun</name>
     <description>Simple group audio conferencing plugin for Openfire</description>
